unpackaged/main/default/objects/Note_History__c/Note_History__c.object-meta.xml
<CustomObject>
    <label>Note History</label>
    <nameField>
        <displayFormat>NH-{0000000000}</displayFormat>
        <label>Note History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Note Histories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>