unpackaged/main/default/objects/Note_History__c/fields/ModifiedAt__c.field-meta.xml
<CustomField>
    <fullName>ModifiedAt__c</fullName>
    <label>Modified At</label>
    <type>DateTime</type>
</CustomField>