unpackaged/main/default/objects/Note_History__c/fields/ModifiedField__c.field-meta.xml
<CustomField>
    <fullName>ModifiedField__c</fullName>
    <label>Modified Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>