unpackaged/main/default/objects/Note_History__c/fields/Note__c.field-meta.xml
<CustomField>
    <fullName>Note__c</fullName>
    <label>Note</label>
    <referenceTo>Note__c</referenceTo>
    <relationshipLabel>Note Histories</relationshipLabel>
    <relationshipName>Note_Histories</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>