unpackaged/main/default/objects/Note_History__c/fields/PreviousValue__c.field-meta.xml
<CustomField>
    <fullName>PreviousValue__c</fullName>
    <label>Previous Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>